project/stage/testing/lexical/parse_tests/tests/reject/bad_statements/bad_while/compound_assignment_in_condition.ul
int F() {
    while(  temp[0]=0 ) { }
}
